# trace-cmd-ms

./: Makefile  event-parse.h  kernel-shark.c  kshark-plugin.h  my_plugin_build.sh  plugin_xenomai.c  plugin_xenomai_gui.c  trace-cmd.h  trace-filter-hash.c  trace-graph.c  trace-graph.h  trace-plot-task.c  trace-view-store.c  trace-view-store.h  vmw_hv.emt
include/trace-cmd/: trace-cmd.h
include/traceevent/: event-parse.h
kernel-shark/: CMakeLists.txt
kernel-shark-qt/: CMakeLists.txt  README  kernelshark.desktop  org.freedesktop.kshark-record.policy
kernel-shark-qt/examples/: CMakeLists.txt  configio.c  datafilter.c  dataplot.cpp  multiload.c  widgetdemo.cpp
kernel-shark-qt/src/: CMakeLists.txt  KsAdvFilteringDialog.cpp  KsAdvFilteringDialog.hpp  KsCaptureDialog.cpp  KsCaptureDialog.hpp  KsDualMarker.cpp  KsDualMarker.hpp  KsGLWidget.cpp  KsGLWidget.hpp  KsMainWindow.cpp  KsMainWindow.hpp  KsModel.cpp  KsModel.hpp  KsModels.cpp  KsModels.hpp  KsPlotTools.cpp  KsPlotTools.hpp  KsPlugins.hpp  KsSession.cpp  KsSession.hpp  KsTraceGraph.cpp  KsTraceGraph.hpp  KsTraceViewer.cpp  KsTraceViewer.hpp  KsUtils.cpp  KsUtils.hpp  KsWidgetsLib.cpp  KsWidgetsLib.hpp  kernelshark.cpp  kshark-record.cpp  libkshark-collection.c  libkshark-collection.h  libkshark-configio.c  libkshark-json.c  libkshark-json.h  libkshark-model.c  libkshark-model.h  libkshark-plugin.c  libkshark-plugin.h  libkshark.c  (+3 more)
kernel-shark-qt/src/plugins/: CMakeLists.txt  SchedEvents.cpp  XenomaiSchedEvents.cpp  rename_sched_events.c  sched_events.c  sched_events.h  xenomai_sched_events.c  xenomai_sched_events.h
kernel-shark-qt/src/prototypes/: CMakeLists.txt  dataload.c  draw.cpp  jsontest.c  kshark-record.c
kernel-shark-qt/tests/: CMakeLists.txt  migrate.c  migrate_new.c
kernel-shark/examples/: CMakeLists.txt  ws_dataload.c
kernel-shark/src/: CMakeLists.txt  KsGLWidget.cpp  KsGLWidget.hpp  KsMainWindow.cpp  KsMainWindow.hpp  KsPlotTools.cpp  KsPlotTools.hpp  KsSession.cpp  KsTraceGraph.cpp  KsUtils.cpp  KsUtils.hpp  KsWidgetsLib.cpp  KsWidgetsLib.hpp  kernelshark.cpp  libkshark-collection.c  libkshark-configio.c  libkshark-model.c  libkshark.c  libkshark.h
kernel-shark/src/plugins/: CMakeLists.txt  MissedEvents.cpp  sched_events.c
ks_qtdev/: CMakeLists.txt  README
ks_qtdev/src/: CMakeLists.txt  GetBackTrace.h  KsCheckBoxDialog.cpp  KsCheckBoxDialog.h  KsDataStore.cpp  KsDataStore.h  KsDeff.h  KsGLWidget.cpp  KsGLWidget.h  KsGLWidget.hpp  KsMainWindow.cpp  KsMainWindow.h  KsMainWindow.hpp  KsModel.cpp  KsModel.h  KsModel.hpp  KsPlotTools.cpp  KsPlotTools.h  KsPlotTools.hpp  KsTraceGraph.cpp  KsTraceGraph.h  KsTraceGraph.hpp  KsTraceViewer.cpp  KsTraceViewer.h  KsTraceViewer.hpp  KsUtils.cpp  KsUtils.h  KsUtils.hpp  PluginSched.cpp  dataload.c  dataload.cpp  draw.cpp  kernelshark.cpp  ks-view.c  ks-view.h  kshark-plugin.c  kshark-plugin.h  libkshark-plugin.c  libkshark-plugin.h  libkshark.c  (+5 more)
ks_qtdev/src/plugins/: CMakeLists.txt  SchedEvents.cpp  XenomaiSchedEvents.cpp  sched_events.c  sched_events.h  xenomai_sched_events.c  xenomai_sched_events.h
ks_qtdev/src/prototypes/: dataload.c  dataload.cpp
ks_qtdev/tests/: CMakeLists.txt  tests.cpp
lib/trace-cmd/: trace-ftrace.c  trace-input.c  trace-util.c
tracecmd/: trace-agent.c  trace-listen.c  trace-msg.c  trace-output.c  trace-read.c  trace-record.c  trace-setup-guest.c  trace-timesync.c  trace-usage.c
tracecmd/include/: trace-local.h
